--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,12 +21,12 @@
 
 // counter
 @import 'counter';
-// counter
-@import 'about';
 
 // gallery
 @import '_gallery';
 
+// about
+@import 'offers';
 // about
 @import 'footer';
 
@@ -36,29 +36,13 @@
 
 @import 'tesmonial';
 
-@import 'discuss';
-
 @import 'service';
-
-@import 'video';
-
-@import 'portfolio';
 
 @import 'experts';
 
 @import 'emergency_contact';
 
 @import 'prising';
-
-@import '_team';
-
-@import 'getIn_tauch';
-
-@import 'work';
-
-@import 'mission';
-
-@import 'portfolio_details';
 
 
 // other pages default
