--- a/scss/_btn.scss
+++ b/scss/_btn.scss
@@ -2,21 +2,22 @@
 	background: #fff;
 	color: #131313;
 	display: inline-block;
-	padding: 14px 44px;
+	padding: 18px 44px;
 	font-family: $font1;
-	font-size: 16px;
+	font-size: 14px;
     font-weight: 400;
     border: 0;
-    border: 1px solid #615CFD;
+    border: 1px solid #48B6FB;
+    letter-spacing: 3px;
     // width: 180px;
     text-align: center;
-    color: #615CFD !important;
+    color: #48B6FB !important;
     text-transform: uppercase;
     cursor: pointer;
     &:hover{
-        background: #615CFD;
+        background: #48B6FB;
         color: #fff !important;
-        border: 1px solid #615CFD;
+        border: 1px solid #48B6FB;
     }
     &:focus{
         outline: none;
@@ -27,25 +28,27 @@
 }
 .boxed-btn3 {
         /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#0181f5+0,5db2ff+100 */
-    background: #615CFD;
+    background: #37EBED;
 	color: #fff;
 	display: inline-block;
-	padding: 12px 33px;
+	padding: 14px 27px;
 	font-family: $font1;
 	font-size: 16px;
     font-weight: 500;
     border: 0;
-    border: 1px solid transparent;
-    @include border-radius(30px);
+    // border: 1px solid transparent;
+    @include border-radius(5px);
+    // width: 180px;
     text-align: center;
     color: #fff !important;
     text-transform: capitalize;
     @include transition(.5s);
     cursor: pointer;
+    letter-spacing: 2px;
     &:hover{
-        border: 1px solid #615CFD;
-        color: #615CFD !important;
-        background: transparent ;
+        background: #4BA8FD;
+        color: #fff !important;
+        // border: 1px solid #28AE61;
     }
     &:focus{
         outline: none;
@@ -56,7 +59,7 @@
 }
 .boxed-btn4 {
         /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#0181f5+0,5db2ff+100 */
-    background: #615CFD;
+    background: #0181F5;
 	color: #fff;
 	display: inline-block;
 	padding: 14px 27px;
@@ -65,7 +68,7 @@
     font-weight: 500;
     border: 0;
     // border: 1px solid transparent;
-    @include border-radius(0px);
+    @include border-radius(5px);
     // width: 180px;
     text-align: center;
     color: #fff !important;
@@ -74,7 +77,7 @@
     cursor: pointer;
     letter-spacing: 2px;
     &:hover{
-        background: #615CFD;
+        background: #0181F5;
         color: #fff !important;
         // border: 1px solid #28AE61;
     }
@@ -120,14 +123,14 @@
 }
 
 .boxed-btn3-green-2 {
-	color: #615CFD !important;
+	color: #48B6FB !important;
 	display: inline-block;
     padding: 14px 31px;
 	font-family: $font1;
 	font-size: 14px;
     font-weight: 400;
     border: 0;
-    border: 1px solid #615CFD;
+    border: 1px solid #48B6FB;
     @include border-radius(5px);
     // width: 180px;
     text-align: center;
@@ -136,7 +139,7 @@
     cursor: pointer;
     letter-spacing: 2px;
     &:hover{
-        background: #615CFD;
+        background: #48B6FB;
         color: #fff !important;
         border: 1px solid transparent;
     }
@@ -191,16 +194,17 @@
         background: #009DFF;
     }
 }
-.line_btn{
+.prising_btn{
     display: inline-block;
-    font-size: 15px;
-    color: #615CFD;
-    border: 1px solid #615CFD;
+    font-size: 14px;
+    color: #5DB2FF;
+    border: 1px solid #5DB2FF;
     text-transform: capitalize;
-    padding: 13px 34px;
-    font-weight: 600;
+    padding: 8px 28px;
+    font-weight: 500;
+    @include border-radius(5px);
     &:hover{
-        background: #615CFD;
+        background: #5DB2FF;
         color: #fff;
     }
 }
