--- a/scss/_counter.scss
+++ b/scss/_counter.scss
@@ -1,39 +1,20 @@
 .counter_area{
-    padding-bottom: 120px;
-    padding-top: 75px;
-    @media #{$mobile_device} {
-        padding-bottom: 30px;
-        padding-top: 60px;
-    }
+    background: #F5FBFF;
+    padding: 100px 0 70px 0;
     .single_counter{
-        border: 1px solid #E8E8E8;
-        padding: 50px 0 43px 0;
         margin-bottom: 30px;
-        @include transition(.3s);
-        h3 {
-            margin-bottom: 16px;
+        h3{
+            margin-bottom: 18px;
             span{
-                color: #615CFD;
                 font-size: 50px;
-                font-weight: 700;
-                @media #{$mobile_device} {
-                    font-size: 35px;
-                }
-                span{
-                    position: relative;
-                    // left: -10px;
-                    top: -2px;
-                }
+                color: #2C2C2C;
+                font-weight: 400;
             }
         }
-        p{
-            font-size: 15px;
-            color:#001D38;
+        span{
+            font-size: 16px;
+            color: #919191;
             font-weight: 400;
-            margin-bottom: 0;
-        }
-        &:hover{
-            border: 1px solid #615CFD;
         }
     }
 }
