--- a/scss/_extend.scss
+++ b/scss/_extend.scss
@@ -1,9 +1,11 @@
-%gradient{
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#615cfd+0,d465ef+100 */
-background: #615cfd; /* Old browsers */
-background: -moz-linear-gradient(top,  #615cfd 0%, #d465ef 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  #615cfd 0%,#d465ef 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  #615cfd 0%,#d465ef 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#615cfd', endColorstr='#d465ef',GradientType=0 ); /* IE6-9 */
-
+.flex-center-start{
+    display: -webkit-box;
+display: -ms-flexbox;
+display: flex;
+-webkit-box-align: center;
+    -ms-flex-align: center;
+        align-items: center;
+-webkit-box-pack: start;
+    -ms-flex-pack: start;
+        justify-content: start;
 }
