--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,81 +4,148 @@
     background-repeat: no-repeat;
     background-size: cover;
     .footer_top{
-        padding-top: 100px;
-        padding-bottom: 160px;
+        padding-top: 117px;
+        padding-bottom: 205px;
         background: #1F1F1F;
         @media #{$mobile_device} {
-            padding-top: 50px;
+            padding-top: 60px;
             padding-bottom: 30px;
         }
         @media #{$tablet_device} {
-            padding-top: 50px;
+            padding-top: 90px;
             padding-bottom: 60px;
         }
-        @media #{$mid_device} {
-            padding-top: 100px;
-            padding-bottom: 100px;
-        }
-        .menu_links{
+        .footer_widget{
             @media #{$mobile_device} {
-                margin-top: 15px;
+                margin-bottom: 30px;
+            }
+            @media #{$tablet_device} {
+                margin-bottom: 30px;
+            }
+            .footer_title{
+                font-size: 22px;
+                font-weight: 400;
+                color: #fff;
+                text-transform: capitalize;
+                margin-bottom: 40px;
+                @media #{$mobile_device} {
+                    margin-bottom: 20px;
+                }
+            }
+            .footer_logo{
+                font-size: 22px;
+                font-weight: 400;
+                color: #fff;
+                text-transform: capitalize;
+                margin-bottom: 40px;
+                @media #{$mobile_device} {
+                    margin-bottom: 20px;
+                }
+            }
+            p{
+                color: #C7C7C7;
+            }
+            p.footer_text{
+                font-size: 16px;
+                color: #B2B2B2;
+                margin-bottom: 23px;
+                font-weight: 400;
+                line-height: 28px;
+                a.domain{
+                    color: #B2B2B2;
+                    font-weight: 400;
+                    &:hover{
+                        color: #5DB2FF;
+                        border-bottom: 1px solid #5DB2FF
+                    }
+                }
+                &.doanar{
+                    a{
+                    font-weight: 500;
+                    color: #B2B2B2;
+                    
+                    &:hover{
+                        color: #5DB2FF;
+                        border-bottom: 1px solid #5DB2FF
+                    }
+                    &.first{
+                        margin-bottom: 10px;
+                    }
+                    }
+
+                }
             }
             ul{
                 li{
-                    display: inline-block;
-                    margin-right: 46px;
-                    @media #{$mobile_device} {
-                        margin-right: 10px;
-                    }
-                    @media #{$mid_device} {
-                        margin-right: 30px;
-                    }
-                    @media #{$tablet_device} {
-                        margin-right: 30px;
-                    }
+                    color: #C7C7C7;
+                    font-size: 13px;
+                    line-height: 42px;
                     a{
-                        color: #fff;
-                        font-size: 15px;
-                        font-weight: 500;
+                        color: #C7C7C7;
                         &:hover{
-                            color:#615CFD ;
+                            color: #5DB2FF;
                         }
                     }
                 }
             }
+            .newsletter_form{
+                position: relative;
+                margin-bottom: 20px;
+                input{
+                    width: 100%;
+                    height: 45px;
+                    background: #fff;
+                    padding-left: 20px;
+                    font-size: 16px;
+                    color: #000;
+                    border: none;
+                    &::placeholder{
+                        font-size: 16px;
+                        color: #919191;
+                    }
+                }
+                button{
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    height: 100%;
+                    border: none;
+                    font-size: 14px;
+                    color: #fff;
+                    background: #5DB2FF;
+                    padding: 10px;
+                    padding: 0 22px;
+                    cursor: pointer;
+                }
+            }
+            .newsletter_text{
+                font-size: 16px;
+                color: #BABABA;
+            }
         }
     }
     .copy-right_text{
-        padding-bottom: 25px;
-        background:#1F1F1F;
+        padding-bottom: 30px;
+        background: #000000;
         .footer_border{
-            padding-bottom: 25px;
-            border-top: 1px solid #363636;
+            padding-bottom: 30px;
         }
         .copy_right{
-            font-size: 15px;
-            color:#C9C9C9;
+            font-size: 13px;
+            color:#C7C7C7;
             margin-bottom: 0;
             font-weight: 400;
             @media #{$mobile_device} {
                 font-size: 13px;
             }
             a{
-                color: #615CFD;
+                color: #5DB2FF;
             }
         }
     }
     .socail_links{
-        // margin-top: 47px;
-        text-align: right;
+        margin-top: 47px;
         @media #{$mobile_device} {
-            // margin-top: 30px;
-            text-align: left;
-            margin-top: 30px;
-        }
-        @media #{$tablet_device} {
-            // margin-top: 30px;
-            text-align: center;
             margin-top: 30px;
         }
         ul{
@@ -86,23 +153,21 @@
                 display: inline-block;
 
                 a{
-                    color: #fff;
+                    font-size: 18px;
+                    color: #C3B2F0;
                     width: 40px;
                     height: 40px;
                     display: inline-block;
                     text-align: center;
-                    background: transparent;
+                    background: #565656;
                     @include border-radius(50%);
                     line-height: 40px !important;
                     margin-right: 7px;
-                    color: #E7F9F9;
-                    line-height: 40px !important;
-                    border: 1px solid #E7F9F9;
-                    font-size: 14px;
+                    color: #FFFFFF;
+                    line-height: 41px !important;
                  &:hover{
                      color: #fff !important;
-                     background: #615CFD;
-                     border: 1px solid #615CFD;
+                     background: #5DB2FF;
                  }
                 }
             }
