--- a/scss/_section_title.scss
+++ b/scss/_section_title.scss
@@ -1,21 +1,9 @@
 .section_title{
-
-    span{
-        position: relative;
-        z-index: 3;
-        font-size: 14px;
-        font-weight: 500;
-        color: #615CFD;
-        text-transform: capitalize;
-        margin-bottom: 19px;
-        display: block;
-        font-family: $font2;
-    }
     h3{
-        font-size: 40px;
-        line-height: 52px;
-        font-weight: 400 ;
-        color: #1F1F1F;
+        font-size: 46px;
+        line-height: 60px;
+        font-weight: 300 ;
+        color: #2C2C2C;
         position: relative;
         z-index: 0;
         padding-bottom: 15px;
@@ -47,27 +35,9 @@
         }
 
     }
-    &.white_text{
-        h3{
-            color: #fff;
-        }
-        span{
-            color: #fff;
-            padding-top: 0;
-            &:before{
-                display: none;
-            }
-        }
-    }
 }
 .mb-50{
     margin-bottom: 50px;
-    @media #{$mobile_device} {
-        margin-bottom: 40px;
-    }
-}
-.mb-90{
-    margin-bottom: 90px;
     @media #{$mobile_device} {
         margin-bottom: 40px;
     }
