--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -5,32 +5,61 @@
     background-image: url(../img/banner/banner2.png);
 }
 .slider_area{
-
     .single_slider{
-        position: relative;
-        z-index: 0;
         height: 900px;
-        background-size: cover;
+        
+        background-size: 100% 100%;
         background-repeat: no-repeat;
         background-position: center center;
-
         @media #{$mobile_device} {
-            height: 500px;
+            height: auto;
+            background-size: cover;
         }
         @media #{$tablet_device} {
             height: 620px;
+            // background-size: cover;
         }
-        &.about_banner.overlay::before{
-            opacity: .5;
+        .phone_thumb {
+            position: relative;
+            top: 110px;
+            @media #{$mobile_device}{
+                top: 60px;
+            }
+            img{
+                @media #{$mobile_device}{
+                    width: 100%;
+                }
+                @media #{$tablet_device}{
+                    width: 100%;
+                }
+                @media #{$mid_device}{
+                    width: 100%;
+                }
+            }
         }
         .slider_text{
+            @media #{$mobile_device}{
+                padding-top: 100px;
+            }
             h3{
                 color: #FFF;
-                font-family: $font2;
-                font-size: 78px;
-                font-weight: 400;
-                line-height: 84px;
-                margin-bottom: 54px;
+                font-family: "Poppins", sans-serif;
+                font-size: 60px;
+                text-transform: capitalize;
+                letter-spacing: 2px;
+                font-weight: 300;
+                line-height: 74px;
+                br{
+                    @media #{$mobile_device}{
+                        display: none;
+                    }
+                    @media #{$tablet_device}{
+                        display: none;
+                    }
+                    @media #{$mid_device}{
+                        display: none;
+                    }
+                }
              span{
                  font-weight: 700;
              }
@@ -40,32 +69,23 @@
                 line-height: 35px;
             }
              @media #{$tablet_device} {
-               font-size: 50px;
-               line-height: 62px;
+               font-size: 30px;
+               line-height: 35px;
 
             }
              @media #{$mid_device} {
                font-size: 45px;
+               letter-spacing: 3px;
                line-height: 55px;
 
             }
             }
-            span{
-                font-size: 30px;
+            p{
+                font-size: 20px;
                 font-weight: 400;
                 color: #FFFFFF;
-                position: relative;
-                z-index: 1;
-                &::before{
-                    position: absolute;
-                    background: #fff;
-                    width: 50px;
-                    height: 2px;
-                    content: '';
-                    left: -67px;
-                    top: 50%;
-                    margin-bottom: -1px;
-                }
+                margin-bottom: 48px;
+                margin-top: 16px;
              @media #{$mid_device} {
                 font-size: 16px;
              }
