--- a/scss/_tesmonial.scss
+++ b/scss/_tesmonial.scss
@@ -1,72 +1,101 @@
-
-.testimonial_area{
-    padding: 160px 0;
-    background-image: url(../img/testmonial/banner.png);
-    position: relative;
-    z-index: 0;
+.testmonial_area{
+    background-image: url(../img/banner/testmonial.png);
+    padding: 196px 0;
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    &:before{
+    position: relative;
+    z-index: 0;
+    @media #{$mobile_device} {
+        padding: 100px 0;
+    }
+    @media #{$tablet_device} {
+        padding: 100px 0;
+    }
+    &::before{
         position: absolute;
+        content: "";
+        background:#5DB2FF;
         width: 100%;
         height: 100%;
         left: 0;
         top: 0;
+        opacity: .9;
         z-index: -1;
-        content: '';
-        background: #1F1F1F;
-        opacity: .6;
     }
-    @media #{$mobile_device} {
-        padding: 50px 0;
-    }
-    .single_testmonial{
-        p{
+    .section_title{
+        h3{
             color: #fff;
-            font-weight: 400;
-            font-size: 24px;
-            line-height: 32px;
-            margin: 35px 0 25px 0;
-            br{
-                @media (min-width: 320px) and (max-width: 1500px) {
-                    display: none;
-                }
+            margin-bottom: 0;
+            padding-bottom: 0;
+        }
+    }
+    p{
+        color: #fff;
+        font-size: 20px;
+        line-height: 34px;
+        font-weight: 400;
+        margin-top: 80px;
+        margin-bottom: 26px;
+        text-decoration: underline;
+        @media #{$mobile_device}{
+            margin-top: 30px;
+        }
+        br{
+            @media #{$mobile_device} {
+                display: none;
             }
+            @media #{$tablet_device} {
+                display: none;
+            }
+            @media #{$mid_device} {
+                display: none;
+            }
+            @media #{$large_device} {
+                display: none;
+            }
+        }
 
+    }
+    .rating_author{
+        display: -webkit-box;
+display: -ms-flexbox;
+display: flex;
+-webkit-box-align: center;
+    -ms-flex-align: center;
+        align-items: center;
+-webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+        i{
+            font-size: 24px;
+            color: #FFD35A;
+            margin: 0 2px;
         }
-        .testmonial_author{
-            .thumb{
-                width: 42px;
-                height: 42px;
-                @include border-radius(50%);
-                margin: auto;
-                margin: auto auto 12px auto;
-            }
-            h3{
-                color: #fff;
-                font-size: 16px;
-                font-weight: 400;
-                margin-bottom: 4px;
-                font-family: $font2;
-                color: #FFFFFF;
-            }
-            span{
-                font-size: 14px;
-                font-weight: 400;
-                color: #fff;
-                font-family: $font2;
-            }   
+        span{
+            font-size: 14px;
+            font-weight: 400;
+            color: #fff;
+            text-transform: uppercase;
         }
     }
-    .owl-carousel .owl-item img {
-        display: inline-block;
-        width: auto;
-    }
-    .owl-carousel .owl-nav div.owl-next {
-        left: auto;
-        right: 0;
-    }
+
     .owl-carousel .owl-nav div {
+        background: transparent;
+        height: 40px;
+        text-align: center;
+        font-size: 13px;
+        line-height: 40px;
+        border: 1px solid #8FC6F6;
         left: 0;
+        width: 40px;
+        line-height: 40px;
+        &.owl-next{
+            left: auto;
+            right: 0;
+        }
+        &:hover{
+            background:#0181F5;
+        }
     }
 }
