Update login - signup

--- a/project3/css/style2.css
+++ b/project3/css/style2.css
@@ -31,10 +31,12 @@ body {
 }
 
 
+
+
 /* === IMAGE MAXIMUM WIDTH === */
 
 img {
-    max-width: 100%;
+    width: 100%;
 }
 
 /* === CLEARFIX === */
@@ -318,4 +320,46 @@ img {
     }
 
 
+}
+
+@media only screen and (max-width: 767px) {
+    .col-m-1 {width: 8.33%;}
+    .col-m-2 {width: 16.66%;}
+    .col-m-3 {width: 25%;}
+    .col-m-4 {width: 33.33%;}
+    .col-m-5 {width: 41.66%;}
+    .col-m-6 {width: 50%;}
+    .col-m-7 {width: 58.33%;}
+    .col-m-8 {width: 66.66%;}
+    .col-m-9 {width: 75%;}
+    .col-m-10 {width: 83.33%;}
+    .col-m-11 {width: 91.66%;}
+    .col-m-12 {width: 100%;}
+}
+
+
+
+
+
+
+
+
+/* === ADDITONAL SETTINGS === */
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css');
+
+.info-msg,
+.success-msg,
+.warning-msg,
+.error-msg {
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 3px 3px 3px 3px;
+}
+.info-msg {
+  color: #059;
+  background-color: #BEF;
+}
+.success-msg {
+  color: #270;
+  background-color: #DFF2BF;
 }
