--- a/kakascorner/css/style2.css
+++ b/kakascorner/css/style2.css
@@ -167,6 +167,7 @@ body { margin: 0; font: 16px/1.3 sans-serif; }
 	word-spacing: 0.2em;
 	font-size: 3em;
   color: #ea0429;
+  font-family: 'Mate SC', serif;
 }
 
 .CSSgal .slider h2 {
